2009-12-18  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Remove the check for valgrind/memcheck.h, we include the file
	in our sources now.

2009-12-11  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Applied patch from Matt McClellan (matt@mc-c.net). Add a check
	for 2 parameter sched_setaffinity in older glibc versions. Fixes
	#564000.

2009-11-22  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Disable visibility attributes on cygwin.

2009-11-18  Mark Probst  <mark.probst@gmail.com>

	* scripts/Makefile.am: Put mono-heapviz into EXTRA_DIST as well.

2009-11-18  Mark Probst  <mark.probst@gmail.com>

	* scripts/Makefile.am: mono-heapviz is not a managed executable.

2009-11-18  Mark Probst  <mark.probst@gmail.com>

	* configure.in: Allow SGen without __thread.

2009-11-17  Marek Habersack  <mhabersack@novell.com>

	* runtime/Makefile.am (TEST_SUPPORT_FILES): added bin/al2 - needed
	for System.Web tests.

2009-11-17  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Add a --enable-minimal=soft-debug option.

2009-11-15  Andreas Faerber  <andreas.faerber@web.de>

	* configure.in (DTrace): Add missing -s switch for dtrace -h.
	Fixes BNC #445074.
	
	Contributed under MIT/X11 license.

2009-11-12  Zoltan Varga  <vargaz@gmail.com>

	* acinclude.m4 (dolt_supported): Handle 'i686-pc-cygwin' too.

2009-11-12  Mark Probst  <mark.probst@gmail.com>

	* scripts/mono-heapviz: New script for generating SGen heap
	visualizations.

	* scripts/Makefile.am: mono-heapviz added.

2009-11-11  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Add checks for link.h and dl_iterate_phdr.

2009-11-10  Jonathan Chambers  <joncham@gmail.com>

	* winconfig.h: Bump version string to 2.7.

	Contributed under MIT/X11 license.

2009-11-09  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Define LLVM_MAJOR/MINOR_VERSION defines to allow working
	around changes in LLVM APIs.
	
	* configure.in: Remove the MONO_ARCH_REGPARMS define.
